--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.orhanobut:logger:2.2.0'
+    implementation files('libs/ABCUtils.jar')
     implementation files('libs/offlineinstallSdk.jar')
     implementation project(path: ':dreamtools')
 }
