--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation files('libs/ABCUtils.jar')
     implementation files('libs/offlineinstallSdk.jar')
     implementation project(path: ':dreamtools')
+//    implementation 'com.github.pilisiyadream:DreamTools:1.0.8'
 }
