--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     implementation 'com.orhanobut:logger:2.2.0'
     implementation files('libs/ABCUtils.jar')
     implementation files('libs/offlineinstallSdk.jar')
-    implementation project(path: ':dreamtools')
-//    implementation 'com.github.pilisiyadream:DreamTools:1.0.8'
+//    implementation project(path: ':dreamtools')
+    implementation 'com.github.pilisiyadream:DreamTools:1.2.2'
 }
