--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     defaultConfig {
         applicationId "com.pilisiya.dream"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -37,8 +37,8 @@ dependencies {
     implementation files('libs/ABCUtils.jar')
     implementation files('libs/offlineinstallSdk.jar')
     implementation project(path: ':dreamtools')
-    //implementation 'com.github.pilisiyadream:DreamTools:1.2.2'
-    implementation 'com.lidong.pdf:android_pdf:1.0.2'
+    // implementation 'com.github.pilisiyadream:DreamTools:1.2.2'
+    // implementation 'com.lidong.pdf:android_pdf:1.0.2'
 
 
 }
